--- a/niudot-app/public/index.html
+++ b/niudot-app/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link href=https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap"" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Niudot</title>
   </head>
