--- a/niudot-app/public/index.html
+++ b/niudot-app/public/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap" rel="stylesheet" />
     <title>Niudot</title>
   </head>
   <body>
